# MainMenuAdapter

./: .gitignore  .gitmodules  CMakeLists.txt  MainMenuConverter.sln  README.md  vcpkg-configuration.json  vcpkg.json
MainMenuConverter/: MainMenuConverter.cs  MainMenuConverter.csproj
src/: Main.cpp
